opam-version: "1.2"
name:         "callipyge"
version:      "dev"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/oklm-wsh/Callipyge"
bug-reports:  "https://github.com/oklm-wsh/Callipyge/issues"
dev-repo:     "git+https://github.com/oklm-wsh/Callipyge.git"
license:      "MIT"

build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]

depends: [
  "jbuilder" {build & >= "1.0+beta9"}
  "base-bytes"
  "alcotest" {test}
]

available: [ocaml-version >= "4.02.0"]
